Configure source of packages in repo (#7)